# solo

./: .editorconfig  .gitmodules  Cargo.toml  LICENSE
examples/: utf8.solo
src/: lib.rs  main.rs  ops.rs  prec.rs  types.rs
src/ast/: format.rs  mod.rs  ops.rs  parse.rs  parsing.rs  prec.rs  print.rs  soa.rs  storage.rs  syn.rs  visit.rs
src/hir/: fmt.rs  mod.rs  ops.rs  opt.rs  parse.rs
src/lir/: build.rs  mod.rs  parse.rs  val.rs
src/mir/: fmt.rs  mod.rs  ops.rs  parse.rs  soa.rs  src.rs  typing.rs
src/ops/: cvt.rs  fmt.rs  mod.rs  prec.rs  syn.rs  tys.rs
src/soa/: ids.rs  mod.rs
src/src/: grammar.pest  mod.rs  parsing.rs  sid.pest  solo.pest
src/storage/: fwd.rs  ident.rs  ints.rs  mod.rs  object.rs  share.rs  slice.rs  syms.rs  vec.rs
src/tck/: logic.rs  mod.rs  parse.rs  types.rs
src/tys/: cvt.rs  err.rs  fmt.rs  mod.rs  sub.rs
src/tys/fix/: cvt.rs  fmt.rs  mod.rs
src/tys/var/: cvt.rs  fmt.rs  mod.rs  sub.rs
src/util/: arena.rs  mod.rs  mut_cell.rs
