[package]
name = "solo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
egg = "0.9.5"
num-bigint = "0.4.4"
pest = "2.7.4"
pest_derive = "2.7.4"
rustc-hash = "1.1.0"
symbol_table = "0.3.0"
thiserror = "1.0.48"
typed-arena = "2.0.2"
unionfind = "0.2.1"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm16-0"]
